kubernetes/manifests/immich/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-http-route
  namespace: immich
  annotations:
    external-dns.alpha.kubernetes.io/hostname: photos.nullservers.com
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https-wildcard
  hostnames:
    - "photos.nullservers.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
