kubernetes/manifests/immich/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default
  namespace: immich
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoria-metrics
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports:
            - port: "2283"
  egress:
    - toEndpoints:
        - {}
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: redis
      toPorts:
        - ports:
            - port: "6379"
    - toFQDNs:
        - matchName: api.github.com
        - matchName: version.immich.cloud
        - matchName: auth.nullservers.com
        ## Machine learning models
        - matchName: huggingface.co
        - matchPattern: "*.modelscope.cn"
        - matchName: "modelscope.cn"
        - matchPattern: "*.*.*.*.hf.co"
        - matchPattern: "*.*.*.hf.co"
        - matchPattern: "*.*.hf.co"
        - matchPattern: "*.hf.co"
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: immich.pgsql.nullservers.com
      toPorts:
        - ports:
            - port: "5432"
